# STM32CubeF4

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README-unspun.md
.github/workflows/: cmake.yml
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_gpio_ex.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
test_cmake/: CMakeLists.txt  CmakeLists.txt  toolchain.cmake
test_cmake/inc/: stm32f4xx_hal_conf.h  system_stm32f4xx.c  usbd_conf.c  usbd_conf.h
